# chat_plus_plus

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt
saved/: http_server.cpp  websocket_client.cpp
src/: CMakeLists.txt  pch.hpp
src/client/: client.hpp  client_data.hpp  client_database.hpp  client_ui.hpp  database.hpp  main.cpp
src/common/: controller.hpp  controller_mapper.hpp  datamodel.hpp  helpers.hpp  icontroller.hpp  message.hpp  message_dispatcher.hpp  request_datamodel.hpp  request_response_handler.hpp  response_datamodel.hpp
src/server/: database.hpp  datamodel.hpp  main.cpp  server.cpp  server.hpp  server_controllers.hpp  session.cpp  session.hpp  websocker_server.cpp
